#add_subdirectory(common)

add_subdirectory(bspinfo)
add_subdirectory(light)
#add_subdirectory(makefont)
#add_subdirectory(mdlviewer)
#add_subdirectory(mkmovie)
add_subdirectory(modelgen)
#add_subdirectory(procinfo)
add_subdirectory(qbsp)
#add_subdirectory(qcc)
#add_subdirectory(qcsg)
add_subdirectory(qfiles)
add_subdirectory(qlumpy)
#add_subdirectory(qrad3)
#add_subdirectory(serverctrl)
#add_subdirectory(smdlexp)
add_subdirectory(sprgen)
#add_subdirectory(studiomdl)
add_subdirectory(texmake)
add_subdirectory(visx2)
add_subdirectory(xwad)